fixed the z-index of project link hints

--- a/src/components/Works.css
+++ b/src/components/Works.css
@@ -96,6 +96,7 @@
   top: -0.5em;
   color: #666;
   font-size: calc(0.8em + 0.08vw);
+  z-index: -5;
 }
 
 .work-hero {
